--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [Wilson's web]
-description: [Hope to have a contact with you, all my friends!]
+description: [Hope to have a contact with you all my friends!]
