--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: Wilson
+title: [Wilson]
 description: [Hope to have a contact with you all my friends!]
 google_analytics: [UA-141073596-1]
