--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: Welcome to Wilson's site!
+title: Welcome to Wilson's Website!
 description: [Hope to have a contact with you all my friends!]
 google_analytics: [UA-141073596-1]
